feat(api): secure authentication HTTP flows
